# DataArt_IT_Leaders_project

./: .gitignore  README.md
Client/: CMakeLists.txt  main.cpp
ClientPython/: clientPython.py
RestClient/: CMakeLists.txt  Client  main.cpp
RestClientServer/: CMakeLists.txt  R_server.cpp  R_server.h  in.json  main.cpp  urlAddr.txt
RestSer/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  main.cpp  serverA
